testing memory utilisation with ZipInputStream class - summary and commands